--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -14,7 +14,15 @@
 
 
 <ion-content>
+<ion-list>
+  <ion-item>
     <img src="assets/img/explore-edit.jpg" (click)="navigateToPage('ExplorePage')"alt="explore">
+  </ion-item>
+  <ion-item>
     <img src="assets/img/training-courses-edit.jpg" (click)="navigateToPage('TrainingCoursesPage')"alt="training courses">
-    <img src="assets/img/immersion-edit.jpg" (click)="navigateToPage('ImmersionPage')" alt="immersion">
+  </ion-item>
+  <ion-item>
+      <img src="assets/img/immersion-edit.jpg" (click)="navigateToPage('ImmersionPage')" alt="immersion">
+    </ion-item>
+</ion-list>
 </ion-content>
