forgot one file

--- a/src/pages/explore/explore.html
+++ b/src/pages/explore/explore.html
@@ -17,7 +17,7 @@
   <h1>Let us help you get started.</h1>
   <ion-slides loop=true>
     <ion-slide>
-      <img src="assets/img/business1.jpg" (click)="playVideo()">
+      <img src="assets/img/business1.jpg">
     </ion-slide>
     <ion-slide>
       <img src="assets/img/business2.jpg">
