added agenda and quotes

--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -3,4 +3,6 @@
 <ion-tab [root]="tab2Root" tabTitle="Profile" tabIcon="contact"></ion-tab>
 <ion-tab [root]="tab3Root" tabTitle="Home" tabIcon="home"></ion-tab>
 <ion-tab [root]="tab4Root" tabTitle="More" tabIcon="more"></ion-tab>
+<ion-tab [root]="tab5Root" tabTitle="Agenda" tabIcon="calendar"></ion-tab>
+<ion-tab [root]="tab6Root" tabTitle="Quotes" tabIcon="quote"></ion-tab>
 </ion-tabs>
