--- a/src/pages/training-courses/training-courses.html
+++ b/src/pages/training-courses/training-courses.html
@@ -13,6 +13,11 @@
 </ion-header>
 
 
-<ion-content padding>
-
+<ion-content>
+  <img src="assets/img/training_courses1.jpg" alt="" (click)="openWebpage('https://app.carlvandevelde.be/mijn-academie/master-in-business?popup=2')">
+  <img src="assets/img/training_courses2.jpg" alt="" (click)="openWebpage('https://app.carlvandevelde.be/mijn-academie/master-in-business?popup=3')">
+  <img src="assets/img/training_courses3.jpg" alt="" (click)="openWebpage('https://app.carlvandevelde.be/mijn-academie/master-in-business?popup=5')">
+  <img src="assets/img/training_courses4.jpg" alt="" (click)="openWebpage('https://app.carlvandevelde.be/mijn-academie/master-in-business?popup=1')">
+  <img src="assets/img/training_courses5.jpg" alt="" (click)="openWebpage('https://app.carlvandevelde.be/mijn-academie/master-in-business?popup=4')">
+  <img src="assets/img/training_courses6.jpg" alt="" (click)="openWebpage('https://app.carlvandevelde.be/mijn-academie/master-in-business?popup=6')">
 </ion-content>
