--- a/src/pages/profile/profile.html
+++ b/src/pages/profile/profile.html
@@ -1,9 +1,3 @@
-<!--
-  Generated template for the ProfilePage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
 
     <ion-navbar color="secondary">
@@ -14,5 +8,5 @@
 
 
 <ion-content padding>
-
+<app-profile-form></app-profile-form>
 </ion-content>
