--- a/src/pages/explore/explore.html
+++ b/src/pages/explore/explore.html
@@ -4,15 +4,19 @@
   See http://ionicframework.com/docs/components/#navigation for more info on
   Ionic pages and navigation.
 -->
-<ion-header>
 
-  <ion-navbar>
-    <ion-title>Video Player</ion-title>
-  </ion-navbar>
+<ion-header><ion-navbar>
+<ion-title>Explore</ion-title>
+</ion-navbar></ion-header>
+<ion-content >
+  <ion-slides>
+    <ion-slide tappable ><img src="assets/img/5W.jpg"></ion-slide>
+    <ion-slide tappable ><img src="assets/img/MVT.jpg"></ion-slide>
+    <ion-slide tappable ><img src="assets/img/BYB.jpg"></ion-slide>
+    <ion-slide tappable ><img src="assets/img/pjb.jpg"></ion-slide>
+    <ion-slide tappable ><img src="assets/img/GVSO.jpg"></ion-slide>
+    <ion-slide tappable ><img src="assets/img/100.jpg"></ion-slide>
+    <ion-slide tappable ><img src="assets/img/iv.jpg"></ion-slide>
+  </ion-slides>
 
-</ion-header>
-
-
-<ion-content padding>
-  <button ion-button (click)="playVideo()">Play Video</button>
 </ion-content>
