--- a/src/pages/welcome/welcome.html
+++ b/src/pages/welcome/welcome.html
@@ -7,7 +7,7 @@
 
 <ion-content>
   <video autoplay loop src="assets/VideoApp.mp4"></video>
-    <img src="assets/imgs/boomB.png" alt="logo" class="logo" >
+    <img src="assets/imgs/logo.png" alt="logo" class="logo" >
   <div class="buttons">
   <button ion-button text-capitalize id="login"(click)="navigateToPage('LoginPage')">
     Login
