--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -14,7 +14,7 @@
 
 
 <ion-content padding>
-<img src="assets/imgs/logo.png" alt="logo" class="logo">
+<img src="assets/imgs/boomB.png" alt="logo" class="logo">
 <app-login-form (loginStatus)="login($event)"></app-login-form>
 <div class="loginString">
    
