--- a/src/pages/quote/quote.html
+++ b/src/pages/quote/quote.html
@@ -1,9 +1,4 @@
-<!--
-  Generated template for the QuotePage page.
 
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
         <ion-navbar color="secondary">
         <ion-title>Online Academy</ion-title>
@@ -13,8 +8,20 @@
 
 <ion-content padding>
     <ion-row><label>Auteur van de quote:</label></ion-row>
-    <ion-input [(ngModel)]="auteur" type="text" placeholder="Auteur van de quote" id="auteur"></ion-input>
+    <ion-input [(ngModel)]="Author" type="text" placeholder="Auteur van de quote" id="auteur"></ion-input>
     <ion-row><label>Quote:</label></ion-row>
-    <ion-textarea [(ngModel)]="quote" type="text" placeholder="Uw quote" id="quote"></ion-textarea>
+    <ion-textarea [(ngModel)]="Quote" type="text" placeholder="Uw quote" id="quote"></ion-textarea>
+    <button ion-button (click)="addQuote(Author,Quote)">Sla quote op</button>
+
+    <ion-list>
+      <ion-list>
+        <ion-item  *ngFor="let quotes of Quotes">
+          <label floating>Auteur: </label>
+          {{quotes.Auteur}}
+          <label floating>Quote: </label>
+          {{quotes.Quote}}
+        </ion-item>
+      </ion-list>
+    </ion-list>
 
 </ion-content>
